libglvnd should document some requirement around `EGL_EXT_platform_base`
Because glvnd merges all client extensions together, we can advertise EGL_EXT_platform_base
but then choose a vendor that doesn't actually support this extension. The vendor might not implement eglCreatePlatform{Window,Pixmap}SurfaceEXT()
, causing anyone using these functions (e.g. Weston) to fail.
This is the case when I tried to implement glvnd support into libhybris [1], which contains an EGL client library wrapping Android's EGL implementation. Libhybris can run on older Android devices that don't support this extension, making those functions not available. (UPDATE: see the first comment)
Alternatively, as glvnd's vendor ABI import has the GetPlatformDisplay()
function which seems to assume that vendors implement this extension, glvnd may document that this extension is required for all vendors.